# RedshiftOld

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini
Editor/: CMakeLists.txt  Editor.cpp  HotLoader.cpp  HotLoader.h  Main.cpp  Watchdog.cpp  Watchdog.h
Editor/Glad/: glad.c
Engine/: CMakeLists.txt
Module/Editor/: CMakeLists.txt  Editor.cpp
Module/Interface/: CMakeLists.txt  Interface.cpp
Module/Okami/: CMakeLists.txt  Okami.cpp
Module/Sandbox/: CMakeLists.txt  Sandbox.cpp
Redshift/: Actor.cpp  Actor.h  CMakeLists.txt  Component.cpp  Component.h  Debug.h  Event.cpp  Event.h  Events.cpp  Events.h  Gizmos.cpp  Gizmos.h  Handle.h  Importer.cpp  Importer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Module.cpp  Module.h  Platform.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  Texture.cpp  Texture.h  Types.h  Vao.cpp  Vao.h  Vertex.h  World.cpp  World.h
Redshift/Components/: Camera.cpp  Camera.h  Model.cpp  Model.h  Transform.cpp  Transform.h
Redshift/Renderer/: DebugRenderer.cpp  DebugRenderer.h  PbRenderer.cpp  PbRenderer.h  PhysicalBasedRenderer.cpp  PhysicalBasedRenderer.h
Redshift/Utils/: FbxImporter.cpp  FbxImporter.h  FileReader.cpp  FileReader.h
Runtime/: CMakeLists.txt  HotLoader.cpp  HotLoader.h  Runtime.cpp  WatchDog.cpp  WatchDog.h  Watchdog.cpp  Watchdog.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  main.cpp
Shader/: Debug.glsl  Pbr.glsl
Shaders/: Gizmos.glsl  Pbr.glsl
